renderer/filmstrip/filmstrip.css
.filmstrip {
  padding: 0;
  display: flex;
  align-items: center;
  overflow-x: scroll;

  --film-fill: var(--main-surface-pop);
  --film-border: var(--film-fill);
  --film-fill-active: var(--main-surface-top);
  --film-border-active: var(--main-border-pop);

  --spacing: var(--main-pad);
  --margin: calc((var(--spacing)) / 2);

  --rate-opacity: 0.75;
}

.experiment-filmstrip-left .filmstrip {
  display: initial;
}

.filmstrip-wrapper {
  display: flex;
  flex-wrap: nowrap;
}

.experiment-filmstrip-left .filmstrip-wrapper {
  height: 100%;
  flex-direction: column;
  overflow-x: hidden;
  overflow-y: scroll;
}

.filmstrip .thumbnail {
  position: relative;
  width: 180px;
  height: 180px;

  display: flex;
  align-items: center;
  justify-content: center;

  flex: 0 0 auto;
  margin: 0 var(--margin);
  padding: var(--spacing);

  border-radius: 3px;
  border: 1px solid var(--film-border);
  background-color: var(--film-fill);
  background-size: contain;
  background-repeat: no-repeat;
  background-origin: content-box;
  background-position: center;

  cursor: pointer;

  will-change: transform;
}

.experiment-filmstrip-left .filmstrip .thumbnail {
  margin: var(--margin) auto;
}

.filmstrip .thumbnail:first-of-type {
  margin-left: var(--spacing);
}
.experiment-filmstrip-left .filmstrip .thumbnail:first-of-type {
  margin-top: var(--spacing);
}

.filmstrip .thumbnail:last-of-type::before {
  /* force a the correct margin on the right of the
   * last element as well
   */
  content: "";
  position: absolute;
  top: 0;
  right: calc(0px - (var(--spacing)));
  height: 100%;
  width: var(--spacing);
  opacity: 0;
  user-select: none;
}

.experiment-filmstrip-left .filmstrip .thumbnail:last-of-type::before {
  top: unset;
  right: 0;
  height: unset;
  width: 100%;
  bottom: calc(0px - (var(--spacing)));
  height: var(--spacing);
}

.filmstrip .thumbnail.selected {
  border-color: var(--film-border-active);
  background-color: var(--film-fill-active);
}
.filmstrip .thumbnail.selected-secondary {
  border-color: var(--film-border-active);
}

.filmstrip .thumbnail img {
  max-width: 100%;
  max-height: 100%;
}

.filmstrip img.rotate-90 {
  transform: rotate(90deg);
}
.filmstrip img.rotate-270 {
  transform: rotate(270deg);
}

.filmstrip .rating {
  position: absolute;
  top: 2px;
  z-index: 1;
  font-size: 1.2rem;
  line-height: 1.2;
  text-shadow: 0 0 10px var(--main-background);
}

.filmstrip .rating [data-rate="0"] {
  padding: 0 2px;
  opacity: var(--rate-opacity);
}

.filmstrip .rating .star {
  color: var(--accent-yellow-bright);
}

.filmstrip .rating .star_border {
  opacity: var(--rate-opacity);
}

.filmstrip .thumbnail::after {
  content: attr(data-filename);
  position: absolute;
  width: 100%;
  left: 0;
  bottom: 5px;
  text-align: center;
  text-shadow: 0 0 10px var(--main-background);
  font-weight: bold;
  word-wrap: break-word;

  pointer-events: none;
  will-change: transform;
}

